[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-tool"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@university.edu" },
]
description = "A modular data sanitization and exploration engine."
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "scipy"
]
