[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analysis_tool"
version = "0.1.2"
description = "Modular Data Sanitization & Exploration Engine"
authors = [
    { name = "E23094" }
]
dependencies = [
    "pandas==2.2.2",
    "numpy>=2.0.0",
    "plotly",
    "scipy",
    "scikit-learn"
]
