[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-tool"
version = "1.0.0"
description = "A modular data sanitization and exploration engine for Google Colab"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "plotly>=5.0",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
plotting = ["plotly>=5.0", "kaleido"]

[tool.setuptools.packages.find]
include = ["data_analysis*"]
